test/Vehicle/Test/CompileMode/Error/NetworkErrors/multidimInputTensor.vcl
network f : Tensor Rat [1, 2] -> Tensor Rat [1]